Refactor YoutubeHandler, YoutubeCmd and ExternalReferenceService